# 1c-cursor-integration

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/: cursor-settings.json.example  settings.json.example
deploy/kb/: Caddyfile
docker_templates/: README.md
docker_templates/1c-syntax/: README.md
docker_templates/searxng/: README.md
docs/: 01-plugins.md  02-mcp-docker.md  03-knowledge-base.md  04-rules-generator.md  05-cursor-mcp-setup.md  AGENT_HANDOFF.md  README.md  quick-start.md
docs/errors/: mcp-docker.json
docs/kb/: AGENT_HANDOFF.md  DEPLOYMENT_TLS.md  EDT_FORMS_AUDIT.md  ОПИСАНИЕ_И_ВНЕДРЕНИЕ.md
profiles/_template/: config.yaml
scripts/: rewrite_kb_imports.py  run_tests.sh  run_web.sh
scripts/kb/: benchmark_search.py  create_profile.py  register_mcp.py  run_mcp.py  test_queries.py
tests/: conftest.py  test_acceptance_tz15.py  test_cursor_mcp.py  test_docker_naming.py  test_docs_render.py  test_integration_dashboard.py  test_kb_api.py  test_kb_ports.py  test_mcp_api.py  test_mcp_compose.py  test_mcp_deploy_api.py  test_mcp_deploy_jobs.py  test_mcp_deploy_syntax.py  test_mcp_section.py  test_plugins.py  test_rules_api.py  test_rules_import.py  test_sections_status.py  test_system_check.py  test_web_smoke.py
tests/kb/: conftest.py  test_acceptance_mcp.py  test_api_auth.py  test_api_checkpoint.py  test_api_integration.py  test_api_jobs.py  test_api_wizard.py  test_bsl_compare.py  test_jobs.py  (+37 more)
web/: app.py  cursor_mcp.py  docker_naming.py  docs_render.py  mcp_compose.py  paths.py  sections.py  settings.py  system_check.py
(+47 files in other folders)
