[project]
name = "1c-cursor"
version = "1.0.0"
description = "Единое веб-приложение для настройки среды разработки 1С в Cursor IDE"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "flask>=3.0.0",
    "httpx>=0.27.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0",
]

[project.scripts]
1c-cursor-web = "web.app:main"
1c-cursor-kb-index = "packages.kb.indexer.pipeline:main"
1c-cursor-kb-mcp = "packages.kb.mcp_server.server:main"
kb-index = "packages.kb.indexer.pipeline:main_deprecated"
kb-mcp = "packages.kb.mcp_server.server:main_deprecated"

[project.optional-dependencies]
kb = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "lxml>=5.0.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "docker>=7.0.0",
    "tqdm>=4.66.0",
]
dev = [
    "pytest>=8.0.0",
]
full = [
    "1c-cursor[kb]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["web*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "requires_xml_fixture: тест требует XML-выгрузку на Desktop",
    "requires_edt_fixture: тест требует EDT-проект на Desktop",
]
